dnl $Id$
dnl ============================================================
dnl  AUTOCONF configuration for ordrules
dnl  by Roger Kehr
dnl  from regex configure.in, by Bruno Haible 18.4.1995

AC_INIT(ordrulei.lisp)
AC_REVISION($Revision$)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL

dnl RL_VOID
AC_HEADER_STDC
dnl CL_STDC_HEADERS
AC_CHECK_HEADERS(string.h)

AC_CANONICAL_HOST
AC_SUBST(host_cpu)
AC_SUBST(host_os)

AC_CONFIG_FILES(version.lisp Makefile)
AC_OUTPUT
