dnl  AUTOCONF configuration for ordrules
dnl  by Roger Kehr
dnl  from regex configure.in, by Bruno Haible 18.4.1995
dnl
AC_INIT(ordrulei.lisp)
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_AIX
AC_ISC_POSIX
AC_MINIX
AC_C_CONST
RL_VOID
AC_HEADER_STDC
CL_STDC_HEADERS
AC_CHECK_HEADERS(string.h)
AC_FUNC_ALLOCA

AC_OUTPUT(Makefile)
